lab3_chzhan_ready